# ASCIIvedio

./: README.md
.github/workflows/: 1.yml  2.yml  3.yml  4.yml  c-cpp.yml
asciiplay/: CMakeLists.txt  README.md
asciiplay/cmake/: FindFFmpeg.cmake
asciiplay/src/: ascii_renderer.cpp  ascii_renderer.hpp  audio_player.cpp  audio_player.hpp  color_lut.hpp  decoder.cpp  decoder.hpp  exporter.cpp  exporter.hpp  main.cpp  pipeline.cpp  pipeline.hpp  terminal_sink.cpp  terminal_sink.hpp  tiny_font8x16.hpp
